包含文件的文件夹现在可以直接删除了
